# w806-air103-cmake

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  gcc_csky.ld  reformat.sh  toolchain-csky-unknown-elf.cmake
config/: FreeRTOSConfig.h  csi_config.h
docs/svd/: README.md  w806.svd
lib/: CMakeLists.txt
lib/FreeRTOS-Port/portable/xt804/: FreeRTOSConfig.h  port.c  portasm.S  portmacro.h
lib/FreeRTOS-Vendor/include/: FreeRTOSConfig.h
lib/FreeRTOS-Vendor/portable/xt804/: portmacro.h
lib/drivers/: wm_7816.c  wm_adc.c  wm_cpu.c  wm_cpu.cpp  wm_crypto_hard.c  wm_dma.c  wm_gpio.c  wm_gpio_afsel.c  wm_hal.c  wm_hspi.c  wm_i2c.c  wm_i2s.c  wm_internal_flash.c  wm_io.c  wm_lcd.c  wm_mem.c  wm_pmu.c  wm_pwm.c  wm_sdio_host.c  wm_spi.c  wm_spi_flash.c  wm_tim.c  wm_touch.c  wm_touchsensor.c  wm_uart.c  wm_watchdog.c  wm_wdg.c
lib/drivers/include/: list.h  tls_common.h  wm_7816.h  wm_adc.h  wm_cpu.h  wm_cpu.hpp  wm_crypto_hard.h  wm_dbg.h  wm_dma.h  wm_efuse.h  wm_flash_map.h  wm_gpio.h  wm_gpio_afsel.h  wm_gpio_ex.h  wm_hal.h  wm_hspi.h  wm_i2c.h  wm_i2s.h  wm_include.h  wm_internal_flash.h  wm_io.h  wm_irq.h  wm_mem.h  wm_osal.h  wm_pmu.h  wm_psram.h  wm_pwm.h  wm_rcc.h  wm_rtc.h  wm_sasc.h  wm_sdio_host.h  wm_spi.h  wm_spi_flash.h  wm_tim.h  wm_timer.h  wm_tipc.h  wm_touch.h  wm_touchsensor.h  wm_uart.h  wm_watchdog.h  (+1 more)
lib/dsp/include/: csky_common_tables.h  csky_const_structs.h  csky_math.h  csky_vdsp2_const_structs.h  csky_vdsp2_math.h
lib/port/: libc_port.c
lib/system/: startup.S  system.c  trap_c.c  trap_c.cpp  vectors.S
lib/system/include/: core_804.h  csi_config.h  csi_core.h  csi_gcc.h  wm_config.h  wm_debug.h  wm_regs.h  wm_type_def.h
lib/tls_drivers/: wm_cpu.c  wm_irq.c  wm_pmu.c  wm_timer.c  wm_timer.cpp
lib/tls_drivers/include/priv/: core_804.h  wm_regs.h
lib/tls_drivers/include/pub/: int_alias.h  wm_cpu.h  wm_irq.h  wm_pmu.h  wm_timer.h  wm_timer.hpp
src/: board_init.c  board_init.cpp  core.cpp  coret.cpp  interruption.cpp  main.cpp  serial.cpp  timer.cpp
src/include/: FreeRTOSConfig.h  board_init.h  core.h  interruption.h  isr.h  timer.hpp
